# HVAC-predictive-control

./: .gitignore  README.md  pyproject.toml
data/interim/: gaia_data_0.csv  gaia_data_10.csv  gaia_data_2.csv  gaia_data_4.csv  gaia_data_5.csv  gaia_data_6.csv  gaia_data_7.csv  gaia_data_8.csv
data/processed/: gaia_data_0.csv  gaia_data_1.csv  gaia_data_10.csv  gaia_data_1_week0.csv  gaia_data_1_week1.csv  gaia_data_1_week2.csv  gaia_data_1_week3.csv  gaia_data_2.csv  gaia_data_3.csv  gaia_data_4.csv  gaia_data_5.csv  gaia_data_6.csv  gaia_data_7.csv  gaia_data_8.csv  gaia_data_9.csv  prediction_gaia_data.csv  test_x.csv  test_y.csv  train_x.csv  train_y.csv
data/raw/: test_synthetic_data_with_outliers.txt  train_synthetic_data.txt
models/: som.npy
models/anfis.tf/: fingerprint.pb  keras_metadata.pb  saved_model.pb
notebooks/: 1.0-inital-som-implementation.ipynb  1.0-moriwaki-som-implementation.ipynb  10.0-final-pipeline.gaia-data.ipynb  10.0-som-gaia-data.ipynb  11.0-anfis-gaia-data.ipynb  11.0-filtering-gaia-data.ipynb  12.0-creating-gaia-prediction-dataset.ipynb  13.0-anfis-gaia-data.ipynb  14.0-lstm-gaia-data.ipynb  2.0-custom-som-implementation.ipynb  3.0-novelty-detection-implementation.ipynb  4.0-synthetic-anomalies-analysis.ipynb  5.0-input-data-vs-som-parameters.ipynb  6.0-anfis-time-series-prediction.ipynb  7.0-gaia-data-analysis.ipynb  8.0-preprocessing-gaia-data.ipynb  9.0-decision-plots-gaia-data.ipynb  9.1-correlation-experiment.ipynb
scripts/: som_pipeline.py
scripts/anfis_implementations/: anfis_grabiele.py  anfis_gregor.py  anfis_jfpower.py  (+3 more)
(+46 files in other folders)
